# schnee

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  deploy.yaml  release.yaml  validate.yaml
scripts/: prepare_release.py
src/schnee/: ndef.py
src/schnee/adapters/backend/: __init__.py  contracts.py  core.py
src/schnee/adapters/backend/pcsc/: __init__.py  backend.py  client.py  reader.py
src/schnee/adapters/ntag/: __init__.py  apdu.py  core.py  crypt.py  secure_messaging.py  utils.py
src/schnee/adapters/ntag/apdu/: __init__.py  base.py  ntag424.py  presets.py
src/schnee/adapters/ntag/profile/: __init__.py  converters.py  editor.py  fields.py  models.py  ndef.py  planning.py
src/schnee/controllers/cli/: commands.py  errors.py  main.py  output.py  parsing.py
src/schnee/release/: __init__.py  versioning.py
src/schnee/services/: __init__.py  backend.py  base.py  ntag_profile.py
src/schnee/utils/logger/: logger.py
src/schnee/utils/ntag/: __init__.py  constants.py
tests/schnee/: test_ndef.py
tests/schnee/adapters/backend/: test_core.py
tests/schnee/adapters/backend/pcsc/: test_backend.py  test_client.py
tests/schnee/adapters/ntag/: test_apdu.py  test_core.py  test_crypt.py  test_secure_messaging.py
tests/schnee/adapters/ntag/apdu/: test_base.py  test_ntag424.py  test_presets.py
tests/schnee/adapters/ntag/profile/: test_converters.py  (+5 more)
tests/schnee/controllers/cli/: test_backends.py  test_errors.py  test_main.py  test_ntag.py
tests/schnee/release/: test_versioning.py
tests/schnee/services/: test_backend.py  test_ntag_profile.py
